tests/baselines/reference/stringLiteralTypesInUnionTypes02.errors.txt
stringLiteralTypesInUnionTypes02.ts(3,5): error TS2322: Type 'undefined' is not assignable to type 'string'.
stringLiteralTypesInUnionTypes02.ts(4,5): error TS2322: Type 'undefined' is not assignable to type 'string'.


==== stringLiteralTypesInUnionTypes02.ts (2 errors) ====
    type T = string | "foo" | "bar" | "baz";
    
    var x: "foo" | "bar" | "baz" | string = undefined;
        ~
!!! error TS2322: Type 'undefined' is not assignable to type 'string'.
    var y: T = undefined;
        ~
!!! error TS2322: Type 'undefined' is not assignable to type 'string'.
    
    if (x === "foo") {
        let a = x;
    }
    else if (x !== "bar") {
        let b = x || y;
    }
    else {
        let c = x;
        let d = y;
        let e: (typeof x) | (typeof y) = c || d;
    }
    
    x = y;
    y = x;